src/url_parser.c
/* Generated by re2c 0.16 on Fri Sep  9 20:29:45 2016 */
#line 1 "url_parser.re"
#include <stdlib.h>
#include <string.h>
#include "url_parser.h"

int url_parse (const char *url_str, URL *url)
{
  const char *marker;
  const char *ctxmarker;
  const char *src = url_str;
  int pos = 0;

#line 15 "url_parser.c"
{
	unsigned char yych;
	yych = *url_str;
	switch (yych) {
	case 0x00:	goto yy2;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy6;
	default:	goto yy4;
	}
yy2:
	++url_str;
#line 63 "url_parser.re"
	{ return 0;}
#line 79 "url_parser.c"
yy4:
	++url_str;
yy5:
#line 62 "url_parser.re"
	{ --url_str; goto hier_part; }
#line 85 "url_parser.c"
yy6:
	yych = *(marker = ++url_str);
	switch (yych) {
	case '+':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy8;
	default:	goto yy5;
	}
yy7:
	++url_str;
	yych = *url_str;
yy8:
	switch (yych) {
	case '+':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy7;
	case ':':	goto yy10;
	default:	goto yy9;
	}
yy9:
	url_str = marker;
	goto yy5;
yy10:
	++url_str;
#line 64 "url_parser.re"
	{
    int len = url_str - src - 1;
    url->scheme = get_lex(src, &pos, len);
    pos++; // add ":"
    goto hier_part;
  }
#line 242 "url_parser.c"
}
#line 70 "url_parser.re"


hier_part:

#line 249 "url_parser.c"
{
	unsigned char yych;
	yych = *url_str;
	switch (yych) {
	case 0x00:	goto yy14;
	case '/':	goto yy18;
	default:	goto yy16;
	}
yy14:
	++url_str;
#line 75 "url_parser.re"
	{ return 0; }
#line 262 "url_parser.c"
yy16:
	++url_str;
yy17:
#line 74 "url_parser.re"
	{ --url_str; goto hier_part_host; }
#line 268 "url_parser.c"
yy18:
	yych = *++url_str;
	switch (yych) {
	case '/':	goto yy19;
	default:	goto yy17;
	}
yy19:
	++url_str;
#line 76 "url_parser.re"
	{ pos +=2; goto hier_part_authority; }
#line 279 "url_parser.c"
}
#line 77 "url_parser.re"


hier_part_authority:

#line 286 "url_parser.c"
{
	unsigned char yych;
	yych = *url_str;
	switch (yych) {
	case 0x00:	goto yy23;
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case ';':
	case '=':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy27;
	case '%':	goto yy28;
	case '@':	goto yy29;
	default:	goto yy25;
	}
yy23:
	++url_str;
#line 82 "url_parser.re"
	{ return 0;}
#line 378 "url_parser.c"
yy25:
	++url_str;
yy26:
#line 81 "url_parser.re"
	{ url_str--; goto hier_part_host; }
#line 384 "url_parser.c"
yy27:
	yych = *(marker = ++url_str);
	switch (yych) {
	case '!':
	case '$':
	case '%':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case ';':
	case '=':
	case '@':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy32;
	default:	goto yy26;
	}
yy28:
	yych = *(marker = ++url_str);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy35;
	default:	goto yy26;
	}
yy29:
	++url_str;
#line 83 "url_parser.re"
	{
    int len = url_str - src - pos - 1; // unshift 1 char for "@"
    url->userinfo = get_lex(src, &pos, len);
    pos++; // shift for "@" char
    goto hier_part_host;
  }
#line 506 "url_parser.c"
yy31:
	++url_str;
	yych = *url_str;
yy32:
	switch (yych) {
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case ';':
	case '=':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy31;
	case '%':	goto yy34;
	case '@':	goto yy29;
	default:	goto yy33;
	}
yy33:
	url_str = marker;
	goto yy26;
yy34:
	++url_str;
	yych = *url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy35;
	default:	goto yy33;
	}
yy35:
	++url_str;
	yych = *url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy31;
	default:	goto yy33;
	}
}
#line 89 "url_parser.re"


hier_part_host:

#line 659 "url_parser.c"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	yych = *url_str;
	ctxmarker = url_str;
	switch (yych) {
	case 0x00:	goto yy38;
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case ';':
	case '=':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy42;
	case '%':	goto yy45;
	case '/':	goto yy46;
	case '0':	goto yy48;
	case '1':	goto yy49;
	case '2':	goto yy50;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy51;
	case '[':	goto yy52;
	default:	goto yy40;
	}
yy38:
	++url_str;
#line 94 "url_parser.re"
	{ return 0;}
#line 753 "url_parser.c"
yy40:
	++url_str;
yy41:
#line 93 "url_parser.re"
	{ goto hier_part_path; }
#line 759 "url_parser.c"
yy42:
	yyaccept = 0;
	marker = ++url_str;
	yych = *url_str;
yy43:
	switch (yych) {
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ';':
	case '=':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy42;
	case '%':	goto yy53;
	default:	goto yy44;
	}
yy44:
#line 127 "url_parser.re"
	{
    int len = url_str - src - pos;
    url->host->type = REGNAME;
    char *name = get_lex(src, &pos, len);
    strncpy (url->host->name, name, HOST_MAX_LEN < len + 1 ? HOST_MAX_LEN : len + 1);
    free (name);
    goto hier_part_port;
  }
#line 856 "url_parser.c"
yy45:
	yyaccept = 1;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy55;
	default:	goto yy41;
	}
yy46:
	++url_str;
	url_str = ctxmarker;
#line 95 "url_parser.re"
	{
    url->host->type = UNKNOWN;
    goto hier_part_path;
  }
#line 893 "url_parser.c"
yy48:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy56;
	default:	goto yy43;
	}
yy49:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy56;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy51;
	default:	goto yy43;
	}
yy50:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy56;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':	goto yy51;
	case '5':	goto yy57;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy48;
	default:	goto yy43;
	}
yy51:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy56;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy48;
	default:	goto yy43;
	}
yy52:
	yyaccept = 1;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':	goto yy58;
	case ':':	goto yy59;
	case 'f':	goto yy60;
	case 'v':	goto yy61;
	default:	goto yy41;
	}
yy53:
	++url_str;
	yych = *url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy55;
	default:	goto yy54;
	}
yy54:
	url_str = marker;
	switch (yyaccept) {
	case 0: 	goto yy44;
	case 1: 	goto yy41;
	default:	goto yy127;
	}
yy55:
	++url_str;
	yych = *url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy42;
	default:	goto yy54;
	}
yy56:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '0':	goto yy62;
	case '1':	goto yy63;
	case '2':	goto yy64;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy65;
	default:	goto yy43;
	}
yy57:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy56;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':	goto yy48;
	default:	goto yy43;
	}
yy58:
	yych = *++url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy66;
	case ':':	goto yy67;
	default:	goto yy54;
	}
yy59:
	yych = *++url_str;
	switch (yych) {
	case ':':	goto yy68;
	default:	goto yy54;
	}
yy60:
	yych = *++url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'f':	goto yy66;
	case ':':	goto yy67;
	case 'e':	goto yy69;
	default:	goto yy54;
	}
yy61:
	yych = *++url_str;
	switch (yych) {
	case ']':	goto yy54;
	default:	goto yy70;
	}
yy62:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy72;
	default:	goto yy43;
	}
yy63:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy72;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy65;
	default:	goto yy43;
	}
yy64:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy72;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':	goto yy65;
	case '5':	goto yy73;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy62;
	default:	goto yy43;
	}
yy65:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy72;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy62;
	default:	goto yy43;
	}
yy66:
	yych = *++url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy74;
	case ':':	goto yy67;
	default:	goto yy54;
	}
yy67:
	yych = *++url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy75;
	case ':':	goto yy76;
	default:	goto yy54;
	}
yy68:
	yych = *++url_str;
	switch (yych) {
	case '0':	goto yy77;
	case '1':	goto yy78;
	case '2':	goto yy79;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy80;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':	goto yy81;
	case ']':	goto yy82;
	case 'f':	goto yy84;
	default:	goto yy54;
	}
yy69:
	yych = *++url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy74;
	case '8':	goto yy85;
	case ':':	goto yy67;
	default:	goto yy54;
	}
yy70:
	++url_str;
	yych = *url_str;
	switch (yych) {
	case ']':	goto yy86;
	default:	goto yy70;
	}
yy72:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '0':	goto yy88;
	case '1':	goto yy89;
	case '2':	goto yy90;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy91;
	default:	goto yy43;
	}
yy73:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy72;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':	goto yy62;
	default:	goto yy43;
	}
yy74:
	yych = *++url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy92;
	case ':':	goto yy67;
	default:	goto yy54;
	}
yy75:
	yych = *++url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy93;
	case ':':	goto yy94;
	default:	goto yy54;
	}
yy76:
	yych = *++url_str;
	switch (yych) {
	case '0':	goto yy95;
	case '1':	goto yy96;
	case '2':	goto yy97;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy98;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy99;
	case ']':	goto yy82;
	default:	goto yy54;
	}
yy77:
	yych = *++url_str;
	switch (yych) {
	case '.':	goto yy100;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy101;
	case ':':	goto yy102;
	case ']':	goto yy82;
	default:	goto yy54;
	}
yy78:
	yych = *++url_str;
	switch (yych) {
	case '.':	goto yy100;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy103;
	case ':':	goto yy102;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy101;
	case ']':	goto yy82;
	default:	goto yy54;
	}
yy79:
	yych = *++url_str;
	switch (yych) {
	case '.':	goto yy100;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':	goto yy103;
	case '5':	goto yy104;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy105;
	case ':':	goto yy102;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy101;
